--- a/src/Mcms/PaymentBundle/Resources/views/Employee/new.html.twig
+++ b/src/Mcms/PaymentBundle/Resources/views/Employee/new.html.twig
@@ -26,7 +26,7 @@
 <script type="text/javascript">
 	var collectionHolder = $('ul.products');
 
-	var $addProductLink = $('<a href="#" class="add_product_link">Add a product</a>');
+	var $addProductLink = $('<a href="#" class="add_product_link"><button class="button button_blue" type="submit">Add a product</button></a>');
 	var $newLinkLi = $('<p></p>').append($addProductLink);
 
 	jQuery(document).ready(function() {
