fixes & payment tpls

--- a/app/Resources/views/adminDashboard.html.twig
+++ b/app/Resources/views/adminDashboard.html.twig
@@ -4,8 +4,8 @@
 
 {% block tabmenu %}
 	<ul>
-		{{ helpers.tab('admin.admin', 'home', 'Strona glowna') }}
-		{{ helpers.tab('users_list','users', 'Uzytkownicy') }}
+		{{ helpers.tab('admin.admin', 'home', 'Strona główna') }}
+		{{ helpers.tab('users_list','users', 'Użytkownicy') }}
 		{{ helpers.tab('admin.employeeList', 'users', 'Lekarze') }}
 		{{ helpers.tab('admin.productList', 'products', 'Produkty') }}
 		
