--- a/app/Resources/views/employeeDashboard.html.twig
+++ b/app/Resources/views/employeeDashboard.html.twig
@@ -4,7 +4,7 @@
 
 {% block tabmenu %}
 	<ul>
-		{{ helpers.tab('employee_dashboard', 'home', 'Strona glowna') }}
+		{{ helpers.tab('employee_dashboard', 'home', 'Strona główna') }}
 		{{ helpers.tab('employee.patientList', 'users', 'Pacjenci') }}
 	</ul>
 {% endblock %}
