--- a/app/Resources/views/patientDashboard.html.twig
+++ b/app/Resources/views/patientDashboard.html.twig
@@ -4,7 +4,7 @@
 
 {% block tabmenu %}
 	<ul>
-		{{ helpers.tab('patient_dashboard', 'home', 'Strona glowna') }}
+		{{ helpers.tab('patient_dashboard', 'home', 'Strona główna') }}
 		{{ helpers.tab('patient.medicalHistory','calendar', 'Karta pacjenta') }}
 		{{ helpers.tab('patient.listOfEmployees', 'users', 'Lekarze') }}
 	</ul>
