--- a/src/Mcms/UserBundle/Resources/views/Employee/editProfile.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Employee/editProfile.html.twig
@@ -14,6 +14,7 @@
     
     	<label>Imię:</label> {{ form_widget(form.user.firstName) }}<br />
     	<label>Nazwisko:</label> {{ form_widget(form.user.lastName) }}<br />
+        <label>Specjalność:</label> {{ form_widget(form.employee.position) }}<br />
     	{{ form_rest(form) }}
     
    
