--- a/src/Mcms/MedicalHistoryBundle/Resources/views/Employee/list.html.twig
+++ b/src/Mcms/MedicalHistoryBundle/Resources/views/Employee/list.html.twig
@@ -14,7 +14,7 @@
 {% block content %}
 <h1 class="pageTitle">Karta pacjenta</h1>
 	<div class="tableOpt">
-		<h4>Lista wpisów w karcie pacjenta <strong>{{ patient }}</strong> <a href="{{ path('employee.medicalHistoryNew', { 'patientId': patient.id }) }}"><button class="button button_blue" type="submit" style="float:right">Utwórz wpis w karcie</button></a></h4>	
+		<h4>Lista wpisów w karcie pacjenta <a href="{{ path('employee.patientShow', { 'patientId': patient.id }) }}"><strong>{{ patient }}</strong></a><a href="{{ path('employee.medicalHistoryNew', { 'patientId': patient.id }) }}"><button class="button button_blue" type="submit" style="float:right">Utwórz wpis w karcie</button></a></h4>	
     </div><!--end table Options-->	
 		<table cellpadding="0" cellspacing="0" class="tableHead" width="100%" id="example">
 				<colgroup>
