--- a/app/Resources/views/employeeDashboard.html.twig
+++ b/app/Resources/views/employeeDashboard.html.twig
@@ -6,5 +6,6 @@
 	<ul>
 		{{ helpers.tab('employee_dashboard', 'home', 'Strona główna') }}
 		{{ helpers.tab('employee.patientList', 'users', 'Pacjenci') }}
+		{{ helpers.tab('employee.timetableList', 'calendar', 'Wizyty') }}
 	</ul>
 {% endblock %}
