patient ttable entry list

--- a/app/Resources/views/patientDashboard.html.twig
+++ b/app/Resources/views/patientDashboard.html.twig
@@ -7,5 +7,6 @@
 		{{ helpers.tab('patient_dashboard', 'home', 'Strona główna') }}
 		{{ helpers.tab('patient.medicalHistory','calendar', 'Karta pacjenta') }}
 		{{ helpers.tab('patient.listOfEmployees', 'users', 'Lekarze') }}
+		{{ helpers.tab('patient.timetableList', 'calendar', 'Wizyty') }}
 	</ul>
 {% endblock %}
